[gd_scene load_steps=48 format=3 uid="uid://bvm2exo6iry4y"]

[ext_resource type="Texture2D" uid="uid://5q7s73fal10s" path="res://Assets/Player/lightning_ronin_full_v1.0.png" id="1_cd7a0"]
[ext_resource type="Script" uid="uid://00gmrnsb0u42" path="res://Scripts/JackScripts/JackController.gd" id="1_jjc82"]
[ext_resource type="Script" uid="uid://cd2ntc05ylnkn" path="res://Scripts/JackScripts/FSM.gd" id="2_1nvgf"]
[ext_resource type="Script" uid="uid://re645wp6k6ml" path="res://Scripts/JackScripts/PlayerRes.gd" id="2_02sdt"]
[ext_resource type="Shader" uid="uid://dlgpseqakkaha" path="res://ShaderNResources/PaletteSwap.gdshader" id="2_j6iir"]
[ext_resource type="Texture2D" uid="uid://b40ru3fkltb1t" path="res://Assets/Player/lightning_ronin_full_v1.0_palette.png" id="3_n7rl4"]
[ext_resource type="Script" uid="uid://b77tbo71s07ev" path="res://Scripts/JackScripts/idle.gd" id="3_resd0"]
[ext_resource type="AudioStream" uid="uid://cngjhq0f6m7dg" path="res://Assets/Audio/PlayerSFX/AttackSfx.mp3" id="3_vhhml"]
[ext_resource type="Script" uid="uid://defwnqb23umj1" path="res://Scripts/JackScripts/run.gd" id="5_76evf"]
[ext_resource type="Shader" uid="uid://j58pc76bf0ih" path="res://ShaderNResources/BulletTimeFilter.gdshader" id="5_lvgk5"]
[ext_resource type="Script" uid="uid://puohb3eptkym" path="res://Scripts/JackScripts/falling.gd" id="6_e56na"]
[ext_resource type="Script" uid="uid://div521tlyga5j" path="res://Scripts/JackScripts/jump.gd" id="7_pd6oq"]
[ext_resource type="Script" uid="uid://bib8ghk24udgu" path="res://Scripts/JackScripts/dash.gd" id="8_a5clf"]
[ext_resource type="AudioStream" uid="uid://d0b66tg4g4fh3" path="res://Assets/Audio/Hades_death.mp3" id="9_ij5gx"]
[ext_resource type="Script" uid="uid://bfb3sbpwqcvng" path="res://Scripts/JackScripts/attack.gd" id="9_ydnmm"]
[ext_resource type="AudioStream" uid="uid://b7la36udks6dk" path="res://Assets/Audio/minecraft_hurt.mp3" id="10_lvgk5"]
[ext_resource type="Script" uid="uid://8ms0yjyoiv1a" path="res://Scripts/JackScripts/hurt.gd" id="12_lixyl"]
[ext_resource type="Script" uid="uid://owi7gjuoeecd" path="res://Scripts/JackScripts/block.gd" id="13_02sdt"]
[ext_resource type="AudioStream" uid="uid://dpg8g4n6tu4ft" path="res://Assets/Audio/PlayerSFX/LightningDash.mp3" id="17_xi45x"]
[ext_resource type="Script" uid="uid://cb84fh5hi7rpa" path="res://Scripts/JackScripts/death.gd" id="18_go7hy"]
[ext_resource type="Script" uid="uid://bt03ya6fpyg1e" path="res://Scripts/JackScripts/ultimate_skill.gd" id="20_ij5gx"]

[sub_resource type="Resource" id="Resource_bg3eg"]
script = ExtResource("2_02sdt")
_char = "Jack"
hp = 100
max_hp = 100
mp = 100
max_mp = 100
_str = 7
def = 7
vit = 7
agi = 7
crit_chance = 0
crit_dmg = 0
metadata/_custom_type_script = "uid://re645wp6k6ml"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ic35r"]
shader = ExtResource("5_lvgk5")
shader_parameter/tint = Vector3(0, 0, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tal6s"]
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rdy6"]
size = Vector2(176, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_go7hy"]
size = Vector2(142, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xi45x"]
size = Vector2(300, 86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij5gx"]
size = Vector2(246, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvgk5"]
size = Vector2(812, 265)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r4w7t"]
shader = ExtResource("2_j6iir")
shader_parameter/palette = ExtResource("3_n7rl4")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="Animation" id="Animation_ngekf"]
resource_name = "AirAttack"
length = 0.45
step = 0.015
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1, 0.166667, 0.266667, 0.333333, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 10), Vector2i(1, 10), Vector2i(2, 10), Vector2i(3, 10), Vector2i(4, 10), Vector2i(5, 10), Vector2i(6, 10), Vector2i(7, 10)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.2362,
"start_offset": 0.3572,
"stream": ExtResource("3_vhhml")
}, {
"end_offset": 0.2189,
"start_offset": 0.3457,
"stream": ExtResource("3_vhhml")
}, {
"end_offset": 0.2189,
"start_offset": 0.3572,
"stream": ExtResource("3_vhhml")
}],
"times": PackedFloat32Array(0.119403, 0.179104, 0.266112)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.104478, 0.119403, 0.164179, 0.179104, 0.268657, 0.283582),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [-8.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}, {
"args": [0.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}, {
"args": [-2.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackBox/AirAttack:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.101969, 0.356891),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_l5uyh"]
resource_name = "Attack1"
length = 0.5
step = 0.015
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.119403, 0.208955, 0.283582, 0.358209, 0.402985, 0.447761, 0.492537),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 21), Vector2i(1, 21), Vector2i(2, 21), Vector2i(3, 21), Vector2i(4, 21), Vector2i(5, 21), Vector2i(6, 21), Vector2i(7, 21)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.2131,
"start_offset": 0.3341,
"stream": ExtResource("3_vhhml")
}],
"times": PackedFloat32Array(0.119403)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0895522, 0.104478),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-8.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackBox/Attack1:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.104478, 0.238806),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_c2x4x"]
resource_name = "Attack2"
length = 0.4
step = 0.015
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.134328, 0.208955, 0.283582, 0.343284),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 22), Vector2i(5, 22), Vector2i(6, 22), Vector2i(7, 22), Vector2i(8, 22)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.2131,
"start_offset": 0.3341,
"stream": ExtResource("3_vhhml")
}],
"times": PackedFloat32Array(0.134328)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.104478, 0.119403),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-8.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackBox/Attack2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.134328, 0.253731),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_as5ct"]
resource_name = "Attack3"
length = 0.7
step = 0.015
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0746269, 0.119403, 0.19403, 0.253731, 0.298507, 0.358209, 0.402985, 0.462687, 0.522388, 0.567164, 0.626866),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 23), Vector2i(9, 23), Vector2i(10, 23), Vector2i(11, 23), Vector2i(12, 23), Vector2i(13, 23), Vector2i(14, 23), Vector2i(15, 23), Vector2i(16, 23), Vector2i(17, 23), Vector2i(18, 23), Vector2i(19, 23)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.328358, 0.343284),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-5.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerAudio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.2131,
"start_offset": 0.3341,
"stream": ExtResource("3_vhhml")
}],
"times": PackedFloat32Array(0.358209)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.2138,
"start_offset": 0.0908,
"stream": ExtResource("17_xi45x")
}],
"times": PackedFloat32Array(0.402985)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackBox/Attack3:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.373134, 0.567164),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_xi45x"]
resource_name = "Blocking"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 25), Vector2i(1, 25), Vector2i(2, 25), Vector2i(3, 25)]
}

[sub_resource type="Animation" id="Animation_3r0r0"]
resource_name = "Dash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 13), Vector2i(3, 13), Vector2i(4, 13), Vector2i(5, 13), Vector2i(9, 13), Vector2i(10, 13), Vector2i(11, 13), Vector2i(12, 13)]
}

[sub_resource type="Animation" id="Animation_rx6pr"]
resource_name = "DashV2"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 17), Vector2i(1, 17), Vector2i(2, 17), Vector2i(7, 17), Vector2i(8, 17), Vector2i(9, 17), Vector2i(10, 17), Vector2i(11, 17), Vector2i(12, 17)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.275,
"stream": ExtResource("17_xi45x")
}],
"times": PackedFloat32Array(0.0333333)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [-12.0],
"method": &"set_audio_volume"
}, {
"args": [],
"method": &"audio_random_pitch"
}]
}

[sub_resource type="Animation" id="Animation_go7hy"]
resource_name = "Death"
length = 1.5
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9, 0.975, 1.05, 1.125, 1.2, 1.275, 1.35, 1.425),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 27), Vector2i(1, 27), Vector2i(2, 27), Vector2i(3, 27), Vector2i(4, 27), Vector2i(5, 27), Vector2i(6, 27), Vector2i(7, 27), Vector2i(8, 27), Vector2i(9, 27), Vector2i(10, 27), Vector2i(11, 27), Vector2i(12, 27), Vector2i(13, 27), Vector2i(14, 27), Vector2i(15, 27), Vector2i(16, 27), Vector2i(17, 27), Vector2i(18, 27), Vector2i(19, 27)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 5.7631,
"start_offset": 2.1916,
"stream": ExtResource("9_ij5gx")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_vrtc8"]
resource_name = "Falling"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_5rdy6"]
resource_name = "Hurt"
length = 0.35
step = 0.015
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0298507, 0.104478, 0.179104, 0.253731),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 26), Vector2i(1, 26), Vector2i(2, 26), Vector2i(3, 26), Vector2i(5, 26)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerAudio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 10.6867,
"start_offset": 0.9074,
"stream": ExtResource("10_lvgk5")
}],
"times": PackedFloat32Array(0.0447761)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_x6fxn"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}

[sub_resource type="Animation" id="Animation_scc6n"]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4)]
}

[sub_resource type="Animation" id="Animation_htthk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/Attack1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackBox/Attack2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackBox/Attack3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackBox/AirAttack:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AttackBox/Ultimate:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ColorRect:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dcc7i"]
resource_name = "Run"
length = 0.55
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="Animation" id="Animation_lvgk5"]
resource_name = "Ultimate"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.733333, 0.866667, 1.06667, 1.2, 1.26667, 1.33333, 1.4, 1.46667, 1.53333, 1.6, 1.66667, 1.73333, 1.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 24), Vector2i(1, 24), Vector2i(2, 24), Vector2i(3, 24), Vector2i(4, 24), Vector2i(5, 24), Vector2i(6, 24), Vector2i(7, 24), Vector2i(8, 24), Vector2i(9, 24), Vector2i(10, 24), Vector2i(11, 24), Vector2i(12, 24), Vector2i(13, 24), Vector2i(14, 24), Vector2i(15, 24), Vector2i(16, 24), Vector2i(17, 24), Vector2i(18, 24), Vector2i(19, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/Ultimate:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.11281, 1.18688, 1.80097),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"activate_ultimate"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0269352, 1.82584),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_ij5gx"]
resource_name = "end_blocking"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JackSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 25), Vector2i(5, 25), Vector2i(6, 25), Vector2i(7, 25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nhmoj"]
_data = {
&"AirAttack": SubResource("Animation_ngekf"),
&"Attack1": SubResource("Animation_l5uyh"),
&"Attack2": SubResource("Animation_c2x4x"),
&"Attack3": SubResource("Animation_as5ct"),
&"Blocking": SubResource("Animation_xi45x"),
&"Dash": SubResource("Animation_3r0r0"),
&"DashV2": SubResource("Animation_rx6pr"),
&"Death": SubResource("Animation_go7hy"),
&"Falling": SubResource("Animation_vrtc8"),
&"Hurt": SubResource("Animation_5rdy6"),
&"Idle": SubResource("Animation_x6fxn"),
&"Jump": SubResource("Animation_scc6n"),
&"RESET": SubResource("Animation_htthk"),
&"Run": SubResource("Animation_dcc7i"),
&"Ultimate": SubResource("Animation_lvgk5"),
&"end_blocking": SubResource("Animation_ij5gx")
}

[node name="Jack" type="CharacterBody2D" node_paths=PackedStringArray("playerAudio") groups=["Player"]]
script = ExtResource("1_jjc82")
stats = SubResource("Resource_bg3eg")
AttackSfx = ExtResource("3_vhhml")
DashSfx = ExtResource("17_xi45x")
playerAudio = NodePath("PlayerAudio")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ic35r")
offset_left = -827.0
offset_top = -616.0
offset_right = 903.0
offset_bottom = 330.0

[node name="Label" type="Label" parent="."]
offset_left = -39.0
offset_top = -70.0
offset_right = 40.0
offset_bottom = -46.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_tal6s")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Attack1" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(82, 0)
shape = SubResource("RectangleShape2D_5rdy6")
disabled = true

[node name="Attack2" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(65, 0)
shape = SubResource("RectangleShape2D_go7hy")
disabled = true

[node name="Attack3" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(144, 0)
shape = SubResource("RectangleShape2D_xi45x")
disabled = true

[node name="AirAttack" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(117, -17.5)
shape = SubResource("RectangleShape2D_ij5gx")
disabled = true

[node name="Ultimate" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_lvgk5")
disabled = true

[node name="JackSprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_r4w7t")
position = Vector2(2, -81)
scale = Vector2(2, 2)
texture = ExtResource("1_cd7a0")
hframes = 44
vframes = 49

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nhmoj")
}
autoplay = "Idle"

[node name="FSM" type="Node" parent="."]
script = ExtResource("2_1nvgf")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("3_resd0")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("5_76evf")

[node name="Falling" type="Node" parent="FSM"]
script = ExtResource("6_e56na")

[node name="Jump" type="Node" parent="FSM"]
script = ExtResource("7_pd6oq")

[node name="Dash" type="Node" parent="FSM"]
script = ExtResource("8_a5clf")

[node name="Attack" type="Node" parent="FSM"]
script = ExtResource("9_ydnmm")

[node name="Hurt" type="Node" parent="FSM"]
script = ExtResource("12_lixyl")
metadata/_custom_type_script = "uid://boxbtoh25c3mr"

[node name="HurtTimer" type="Timer" parent="FSM/Hurt"]
wait_time = 0.55
one_shot = true

[node name="Block" type="Node" parent="FSM"]
script = ExtResource("13_02sdt")
metadata/_custom_type_script = "uid://boxbtoh25c3mr"

[node name="Death" type="Node" parent="FSM"]
script = ExtResource("18_go7hy")
metadata/_custom_type_script = "uid://boxbtoh25c3mr"

[node name="Ultimate" type="Node" parent="FSM"]
script = ExtResource("20_ij5gx")
metadata/_custom_type_script = "uid://boxbtoh25c3mr"

[node name="UltTimer" type="Timer" parent="FSM/Ultimate"]
wait_time = 30.0
one_shot = true

[node name="PlayerAudio" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="AttackBox" to="FSM/Attack" method="_on_attack_box_body_entered"]
